# flight-server-demo

./: .env.example  .gitignore  README.md  pyproject.toml
flight_server/: airport_flight_server.py  azure.py  basic_flight_server.py  client.py  vanilla_flight_server.py
scripts/: airport_client_demo.py  basic_client_demo.py  vanilla_client_demo.py
