[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flight-server-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "duckdb==1.4.4",
    "structlog==25.5.0",
    "dotenv==0.9.9",
    "deltalake==1.4.2",
    "pyarrow==23.0.1",
    "azure-storage-blob==12.28.0",
    "polars>=1.38.1",
]

[project.scripts]
basic-flight-server = "flight_server.basic_flight_server:main"

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["flight_server*"]


[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]
ignore = ["E501"]
